--- a/LogIn.html
+++ b/LogIn.html
@@ -26,13 +26,14 @@
     </div>
     <div class="MainStyle">
         <div class="CenteredField ">
-            <label class="alone LeftMargin TopMargin">Anmeldename:</label>
-            <input class="alone LeftMargin" id="UsernameBox" type="text"/>
-            <label class="alone LeftMargin TopMarginLess50" >Passwort:</label>
-            <input class="alone LeftMargin"  id="PasswordBox" type="password"/>
-            <input class="alone LeftMarginLess30 TopMarginLess50 SubmitButtonStlye "  type="submit" onclick="LogIn()" value="Anmelden"/>
+            <label class="alone LeftMargin25 TopMargin30">Anmeldename:</label>
+            <input class="alone LeftMargin25 UsernameBoxStyle" id="UsernameBox" type="text"/>
+            <label class="alone LeftMargin25 TopMargin25" >Passwort:</label>
+            <input class="alone LeftMargin25 UsernameBoxStyle"  id="PasswordBox" type="password"/>
+            <input class="alone LeftMargin25 TopMargin25 SubmitButtonStlye "  type="submit" onclick="LogIn()" value="Anmelden"/>
+            <p class="LeftMargin25 TopMargin15 CreateAccountStyle" onclick="alert('Funktion noch zu implementieren')"> Erstelle einen neuen Account</p>
         </div>
-        <p>Erstelle einen neuen Account</p>
+        
     </div>
     <div class="FooterStyle">
 
