Add BackgroundImage, Finished CreateNewAccount View

--- a/LogIn.html
+++ b/LogIn.html
@@ -23,11 +23,7 @@
     </head>
 <body>
     <div class="HeaderStyle">
-        <p>Loggen Sie sich ein um ihre ToDo's zu verwalten</p>
-        <!-- <label class="switch">             Implement later
-                <input type="checkbox">
-                <span class="slider round"></span>
-        </label> -->
+        <p class="Headline">Loggen Sie sich ein um ihre ToDo's zu verwalten</p>
     </div>
     <div class="MainStyle">
         <div class="CenteredField ">
@@ -40,9 +36,7 @@
         </div>
         <div class="CreateNewAccountDiv"></div>
     </div>
-    <div class="FooterStyle">
-
-    </div>
+    <div class="FooterStyle"></div>
     <script type="text/javascript" src="Javascript/LogInController.js"></script>
     <script type="text/javascript" src="Javascript/Connection.js"></script>
 </body>
