--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="InputSecStyle">
             <div class="eingabeMitLable">
                 <label class="LabelDesigner alone">Aufgabe</label>
-                <input class="TextboxWidth" id="TaskField" onclick="ClearBox()" type="text"/>
+                <input class="TextboxWidth" id="TaskField" placeholder="Do something" onclick="ClearBox()" type="text"/>
             </div>
 
             <div class="eingabeMitLable">
