--- a/ToDoPage.html
+++ b/ToDoPage.html
@@ -5,20 +5,22 @@
     <link rel="stylesheet" type="text/css" href="/CSS/style.css"/>
     <link rel="stylesheet" type="text/css" href="/CSS/Basic.css"/>
     <script type="text/javascript" src="Javascript/index.js"></script>
-    <script lang="javascript" type="text/javascript" src="Connection.js" ></script>
-    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     
-    <script>
-    var config = {
-        apiKey: "AIzaSyDoXo0MOBiNgJHQ2CJgossHB-HWvDhCpsY",
-        authDomain: "login-l0g1n2.firebaseapp.com",
-        databaseURL: "https://login-l0g1n2.firebaseio.com",
-        projectId: "login-l0g1n2",
-        storageBucket: "",
-        messagingSenderId: "317019018806"
-      };
-    firebase.initializeApp(config);
-    </script>
+    <!-- <script lang="javascript" type="text/javascript" src="Connection.js" ></script> -->
+   
+<script src="https://www.gstatic.com/firebasejs/5.0.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCMnMcU1IL9xstCizmjnOIZhaQTGTsdHbA",
+    authDomain: "todoapp-004.firebaseapp.com",
+    databaseURL: "https://todoapp-004.firebaseio.com",
+    projectId: "todoapp-004",
+    storageBucket: "todoapp-004.appspot.com",
+    messagingSenderId: "631169392720"
+  };
+  firebase.initializeApp(config);
+</script>
 </head>
 <body class="BodyStyle" onload="LoadDefaults()">
 <div>
@@ -48,7 +50,8 @@
         <section class="OutputSecStyle">
             <table class="table" id="DataTable">
                 <tr class="tr">
-                    <th width="85%" class="th">Aufgabe</th>
+                    <th width="5%" class="th">ID</th>
+                    <th width="80%" class="th">Aufgabe</th>
                     <th width="10%" class="th">bis</th>
                     <th width="2.5%" class="th">&nbspKategorie&nbsp</th>
                     <th width="2.5%" class="th">&nbspLöschen&nbsp</th>
@@ -63,6 +66,6 @@
     </footer>
 
 </div>
-
+<script type="text/javascript" src="Javascript/ConnectionToDo.js"></script>
 </body>
 </html>
